WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190826
Invalid ssrc value in the stats of type 'inbound-rtp'
https://bugs.webkit.org/show_bug.cgi?id=190826
Summary
Invalid ssrc value in the stats of type 'inbound-rtp'
Karthik
Reported
2018-10-23 06:50:06 PDT
The SSRC value in the stats of type 'inbound-rtp' is invalid and keeps changing everytime getStats has been called.
Attachments
Patch
(12.29 KB, patch)
2018-10-29 04:15 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(12.30 KB, patch)
2018-10-29 06:53 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-10-23 07:09:47 PDT
Right, looking at the code, we should probably not make the src value visible by default.
Radar WebKit Bug Importer
Comment 2
2018-10-23 08:01:53 PDT
<
rdar://problem/45487435
>
youenn fablet
Comment 3
2018-10-29 04:15:50 PDT
Created
attachment 353282
[details]
Patch
youenn fablet
Comment 4
2018-10-29 06:53:26 PDT
Created
attachment 353286
[details]
Patch
WebKit Commit Bot
Comment 5
2018-10-29 13:10:39 PDT
Comment on
attachment 353286
[details]
Patch Clearing flags on attachment: 353286 Committed
r237561
: <
https://trac.webkit.org/changeset/237561
>
WebKit Commit Bot
Comment 6
2018-10-29 13:10:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug