Invalid ssrc value in the stats of type 'inbound-rtp' https://bugs.webkit.org/show_bug.cgi?id=190826 <rdar://problem/45487435>

Reviewed by Eric Carlson.

Source/WebCore:

Value was not initialized in WebCore if missing from libwebrtc.
Change value to an optional so that it will not appear if libwebrtc does not expose it.
Move integer/boolean values from being initialized to be optional so
that we do not expose them to JS if not exposed by libwebrtc.

Covered by updated tests.

* Modules/mediastream/RTCStatsReport.h:

LayoutTests:

* webrtc/video-mediastreamtrack-stats.html:
* webrtc/video-stats-expected.txt:
* webrtc/video-stats.html:


Canonical link: https://commits.webkit.org/205853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237561 268f45cc-cd09-0410-ab3c-d52691b4dbfc